concord_macros/tests/trybuild/fail/codegen/reserved_bytes_paginate.stderr
error: `Bytes` responses do not support pagination
 --> tests/trybuild/fail/codegen/reserved_bytes_paginate.rs:8:9
  |
8 |     GET Download
  |         ^^^^^^^^
